# rs-img-optimizer

./: Cargo.toml  README.md  justfile
src/: command.rs  lib.rs  main.rs
src/cli/: compressor_menu.rs  converter_menu.rs  mod.rs
src/controllers/: compressor.rs  converter.rs  mod.rs
