[package]
name = "rs-img"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
image_compressor = "1.3.0"
num_cpus = "1.16.0"
webp = "0.2.6"
image = "0.24.7"
rayon = "1.8.0"
camino = "1.1.6"
dirs = "5.0.1"
fltk = "1.4.13"
flemish = "0.4.1"

# optimize for size
[profile.release]
strip = true
lto = true
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
