[package]
name = "rs-img"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
image_compressor = "1.5.2"
num_cpus = "1.16.0"
owo-colors = "4.2.1"
webp = "0.3.0"
image = "0.25.6"
spinoff = "0.8.0"
rayon = "1.10.0"
bon = "3.6.3"
little_exif = "0.6.8"
jiff = "0.2.15"
promkit = { version = "0.9.1", features = ["listbox", "readline"] }

# optimize for size
[profile.release]
strip = true
lto = "fat"
opt-level = "s"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
